# fire-emblem-ai

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  README.md  main.cpp
files/: Assists.html  Skills.html  Weapons.html
files/Images/: azura_profile.txt
files/processed/: azura_name.txt  hp_tess.txt.txt
src/: ImageProcessor.cpp  ImageProcessor.h  main.cpp
src/Core/: Character.cpp  Character.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  README.md
src/ImageProcessing/: ImageProcessor.cpp  ImageProcessor.h
test/: combat.cpp  combat.h
